plugins/com.aptana.ide.parsing/src/com/aptana/ide/lexer/matcher/resources/Regex.bnf
Pattern
	:	Expression
	;

Expression
	:	CARET OrExpr {StartOrExpression}
	|	CARET OrExpr DOLLAR {StartAndEndOrExpression}
	|	OrExpr {OrExpression}
	|	OrExpr DOLLAR {EndOrExpression}
	;

OrExpr
	:	OrExpr PIPE AndExpr {AddAndExpression}
	|	AndExpr {FirstAndExpression}
	;

AndExpr
	:	AndExpr Factor {AddFactor}
	|	Factor {FirstFactor}
	;

Factor
	:	Term STAR {TermStar}
	|	Term PLUS {TermPlus}
	|	Term QUESTION {TermQuestion}
	|	Term LCURLY NUMBER RCURLY {TermRepeat}
	|	Term LCURLY NUMBER COMMA RCURLY {TermRepeatLowerBound}
	|	Term LCURLY COMMA NUMBER RCURLY {TermRepeatUpperBound}
	|	Term LCURLY NUMBER COMMA NUMBER RCURLY {TermRepeatRange}
	|	Term {Term}
	;

Term
	:	LPAREN OrExpr RPAREN {OrExprGroup}
	|	POSITIVE_LOOKAHEAD OrExpr RPAREN {PositiveLookahead}
	|	NEGATIVE_LOOKAHEAD OrExpr RPAREN {NegativeLookahead}
	|	CHARACTER {Character}
	|	COMMA {Character}
	|	MINUS {Character}
	|	WHITESPACE {Whitespace}
	|	ESCAPED_CHARACTER {EscapedCharacter}
	|	DOT {Dot}
	|	CharacterClass {CharacterClass}
	;

CharacterClass
	:	LBRACKET RBRACKET {EmptyCC}
	|	LBRACKET CARET RBRACKET {NegatedEmptyCC}
	|	LBRACKET MINUS RBRACKET {MinusOnlyCC}
	|	LBRACKET CARET MINUS RBRACKET {NegatedMinusOnlyCC}
	|	LBRACKET CharacterClassExpressions RBRACKET {CC}
	|	LBRACKET CARET CharacterClassExpressions RBRACKET {NegatedCC}
	|	LBRACKET MINUS CharacterClassExpressions RBRACKET {MinusCC}
	|	LBRACKET CARET MINUS CharacterClassExpressions RBRACKET {NegatedMinusCC}
	;

CharacterClassExpressions
	:	CharacterClassExpressions CharacterClassExpression {AddCCExpression}
	|	CharacterClassExpression {FirstCCExpression}
	;

CharacterClassExpression
	:	CHARACTER {CharacterExpression}
	|	COMMA {CharacterExpression}
	|	DOLLAR {CharacterExpression}
	|	DOT {CharacterExpression}
	|	PIPE {CharacterExpression}
	|	STAR {CharacterExpression}
	|	QUESTION {CharacterExpression}
	|	WHITESPACE {WhitespaceExpression}
	|	CHARACTER MINUS CHARACTER {CharacterRangeExpression}
	;
